# JAX-ParamOpt

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  python-package.yml  release.yml
Datasets/amber/: ref_ene.json  torsions.json
Datasets/amber/xyztoprmtop/: convert.sh  params  trainset.in
Datasets/amber/xyztoprmtop/0_xyz_files/: mobley_1017962.xyz  mobley_1019269.xyz  mobley_1034539.xyz  mobley_1036761.xyz  mobley_1046331.xyz  mobley_1075836.xyz  mobley_1079207.xyz  mobley_1139153.xyz  mobley_1144156.xyz  mobley_1160109.xyz  mobley_1178614.xyz  mobley_1189457.xyz  mobley_1231151.xyz  mobley_1235151.xyz  mobley_1244778.xyz  mobley_1261349.xyz  mobley_129464.xyz  (+1 more)
backends/: index.html
backends/amber/: index.html
backends/reaxff/: index.html
cli/: index.html
development/: index.html
development/architecture/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: cli.md  index.md  installation.md  python-api.md  quickstart.md
docs/backends/: amber.md  index.md  reaxff.md
docs/development/: architecture.md  contributing.md  index.md  testing.md
docs/inputs/: geometry-formats.md  index.md  parameter-files.md  training-data.md
docs/reference/: index.md
docs/theory/: differentiation.md  index.md  objectives.md  simulation-targets.md
docs/workflows/: index.md  optimization-workflows.md  staged-fitting.md
inputs/: index.html
inputs/geometry-formats/: index.html
inputs/parameter-files/: index.html
inputs/training-data/: index.html
installation/: index.html
jaxparamopt/: __init__.py  config.py  config_loader.py  dlfind.py  driver.py  global_opt.py  helper.py  helper_prmtop.py  input.py  interactions.py  io_utils.py  misc.py  nma.py  optimizer.py  parmed.py  structure_amber.py  test.py
jaxparamopt/backends/: __init__.py  amber.py  base.py  reaxff.py
jaxreaxff/: __init__.py  dlfind.py  driver.py  driver_v3.py  generate_prmtop.py  helper.py  interactions.py  optimizer.py  optimizer_amber.py  optimizer_amber_dlfind.py  optimizer_v2.py  structure.py  structure_amber.py  trainingdata.py
python-api/: index.html
quickstart/: index.html
reference/: index.html
search/: search_index.json
tests/: config_test.py  driver_test.py  energy_force_counter_test.py  input_test.py  reaxff_energy_test.py
theory/: index.html
theory/differentiation/: index.html
theory/objectives/: index.html
theory/simulation-targets/: index.html
workflows/: index.html
workflows/optimization-workflows/: index.html
workflows/staged-fitting/: index.html
(+208 files in other folders)
